# did-cli

./: .env.sample  .gitignore  AGENTS.md  README.md  SECURITY.md  add-to-path.sh  did-cli.zsh  pyproject.toml
.github/workflows/: ci.yml
did_cli/: __init__.py  ansi.py  cli.py  config.py  dates.py  formatting.py  gql.py  report.py  status.py  submit.py
did_cli/queries/: report.graphql  status.graphql
queries/: filter-options.graphql  submit-period.graphql  timesheet.graphql
scripts/: add-to-path.sh
tests/: conftest.py  review-smoke.sh  test_cli_smoke.py  test_config.py  test_dates.py  test_formatting.py
